--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@ video {
 footer {
   margin: 36px 0 36px 0;
   text-align: center;
-  font-size: small;
+  font-size: x-small;
 }
 
 nav a:link {
