--- a/style.css
+++ b/style.css
@@ -456,7 +456,7 @@ a:visited:hover {
 
 @media only screen and (min-width: 1920px) {
   * {
-    font-size: large;
+    font-size: medium;
   }
 
   footer {
