--- a/style.css
+++ b/style.css
@@ -459,6 +459,10 @@ a:visited:hover {
     font-size: medium;
   }
 
+  .caption {
+    font-size: small;
+  }
+
   footer {
     font-size: small;
   }
