--- a/style.css
+++ b/style.css
@@ -503,3 +503,25 @@ a:visited:hover {
     width: 30%;
   }
 }
+
+@media only screen and (min-width: 2560px) {
+  nav .logo {
+    padding-left: 1000px;
+  }
+
+  nav .mainMenu {
+    padding-right: 1000px;
+  }
+
+  nav .mainMenu li {
+    padding-left: 72px;
+  }
+
+  main {
+    margin: 0 1000px;
+  }
+
+  .headline {
+    width: calc(50% - 1000px);
+  }
+}
