--- a/style.css
+++ b/style.css
@@ -75,7 +75,6 @@ nav .mainMenu {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  transition: top 1s ease;
 }
 
 nav .mainMenu li {
@@ -266,6 +265,45 @@ img {
 img:hover {
   filter: brightness(0.8);
   cursor: zoom-in;
+  transition: .5s ease;
+}
+
+/* Modal (hidden by default) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 5;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  max-width: 1920px;
+  width: 90%;
+  height: auto;
+  transition: .5s ease;
+}
+
+#previewImage:hover {
+  cursor: default;
+  filter: none;
+}
+
+#closePreview {
+  position: absolute;
+  top: 26px;
+  right: 18px;
+}
+
+#closePreview img {
+  height: 26px;
+  cursor: pointer;
+  filter: invert();
 }
 
 video {
@@ -461,6 +499,10 @@ a:visited:hover {
     /* text-align: justify;
     text-justify: inter-word; */
   }
+
+  .modal-content {
+    width: 70%;
+  }
 }
 
 @media only screen and (min-width: 1280px) {
@@ -486,7 +528,7 @@ a:visited:hover {
   }
 
   .row {
-    padding-top: 144px;
+    padding-top: 132px;
   }
 
   .column {
