--- a/style.css
+++ b/style.css
@@ -286,7 +286,12 @@ img:hover {
   max-width: 1920px;
   width: 90%;
   height: auto;
+  max-height: 90%;
   transition: .5s ease;
+}
+
+#previewImage {
+  object-fit: contain;
 }
 
 #previewImage:hover {
