--- a/style.css
+++ b/style.css
@@ -284,10 +284,7 @@ img:hover {
 
 #previewImage {
   object-fit: contain;
-  width: 90%;
-  max-width: 1920px;
-  height: auto;
-  max-height: 90%;
+  width: 100%;
 }
 
 #previewImage:hover {
@@ -305,6 +302,28 @@ img:hover {
   height: 26px;
   cursor: pointer;
   filter: invert();
+}
+
+#closePreview img:hover {
+  opacity: 50%;
+}
+
+/* Image Preview Animation */
+#previewImage {  
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.3s;
+  animation-name: zoom;
+  animation-duration: 0.3s;
+}
+
+@-webkit-keyframes zoom {
+  from {-webkit-transform:scale(0.5)} 
+  to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+  from {transform:scale(0.5)} 
+  to {transform:scale(1)}
 }
 
 video {
@@ -502,7 +521,9 @@ a:visited:hover {
   }
 
   #previewImage{
-    width: 70%;
+    width: auto;
+    max-width: 1920px;
+    height: 80%;
   }
 }
 
