--- a/style.css
+++ b/style.css
@@ -42,6 +42,17 @@ nav {
   height: 76px;
   top: 0;
   z-index: 2;
+  transition: .5s ease;
+}
+
+nav img {
+  opacity: 1;
+  transition: .5s ease;
+  cursor: pointer;
+}
+
+nav img:hover {
+  opacity: 0.5;
 }
 
 nav .logo {
@@ -52,7 +63,6 @@ nav .logo {
 
 nav .logo img {
   height: 40px;
-  cursor: pointer;
 }
 
 nav .openMenu {
@@ -64,7 +74,6 @@ nav .openMenu {
 
 nav .openMenu img {
   height: 26px;
-  cursor: pointer;
   filter: invert();
 }
 
@@ -94,7 +103,6 @@ nav .mainMenu .closeMenu {
 
 nav .mainMenu .closeMenu img {
   height: 26px;
-  cursor: pointer;
   filter: invert();
 }
 
@@ -256,16 +264,16 @@ i {
   padding-top: 12px;
 }
 
-img {
+.thumbnail {
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
+  transition: .5s ease;
 }
 
-img:hover {
-  filter: brightness(0.8);
+.thumbnail:hover {
+  filter: brightness(0.5);
   cursor: zoom-in;
-  transition: .5s ease;
 }
 
 /* Modal (hidden by default) */
@@ -304,12 +312,12 @@ img:hover {
   filter: invert();
 }
 
-#closePreview img:hover {
+#closePreview:hover {
   opacity: 50%;
 }
 
 /* Image Preview Animation */
-#previewImage {  
+#previewImage {
   -webkit-animation-name: zoom;
   -webkit-animation-duration: .5s;
   animation-name: zoom;
@@ -317,13 +325,23 @@ img:hover {
 }
 
 @-webkit-keyframes zoom {
-  from {-webkit-transform:scale(0.5)} 
-  to {-webkit-transform:scale(1)}
+  from {
+    -webkit-transform: scale(0.5)
+  }
+
+  to {
+    -webkit-transform: scale(1)
+  }
 }
 
 @keyframes zoom {
-  from {transform:scale(0.5)} 
-  to {transform:scale(1)}
+  from {
+    transform: scale(0.5)
+  }
+
+  to {
+    transform: scale(1)
+  }
 }
 
 video {
@@ -387,6 +405,7 @@ footer {
 nav a:link {
   text-decoration: none;
   color: #999;
+  transition: .5s ease;
 }
 
 nav a:hover {
@@ -405,6 +424,7 @@ a:link {
   text-decoration: underline;
   text-underline-offset: 2px;
   color: #fff;
+  transition: .5s ease;
 }
 
 a:hover {
@@ -520,7 +540,7 @@ a:visited:hover {
     text-justify: inter-word; */
   }
 
-  #previewImage{
+  #previewImage {
     width: auto;
     max-width: 1920px;
     height: 80%;
