--- a/style.css
+++ b/style.css
@@ -205,12 +205,14 @@ img.gallery {
 
 .project-title {
   color: #fff;
-  text-transform: uppercase;  
-  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: bold;  
+  /* letter-spacing: 1px; */
 }
 
 .project-subtitle {
   color: #999;
+  font-size: 12px;
 }
 
 h1 {
@@ -573,6 +575,14 @@ footer {
   .row {
     padding-top: 140px;
   }
+
+  .project-title {
+    font-size: 20px;
+  }
+
+  .project-subtitle {
+    font-size: 14px;
+  }
 }
 
 @media only screen and (min-width: 1920px) {
@@ -607,7 +617,7 @@ footer {
   }
 
   .project-title {
-    font-size: 16px;
+    font-size: 24px;
   }
 
   .project-subtitle {
