--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 @font-face {
+  font-family: "Jost";
+  src: url("fonts/Jost-VariableFont_wght.ttf");
+}
+
+@font-face {
   font-family: "FreeSans";
   src: url("fonts/FreeSans.woff") format('woff');
 }
@@ -27,7 +32,7 @@
   margin: 0;
   box-sizing: border-box;
   color: #fff;
-  font-family: "FreeSans", sans-serif;
+  font-family: "Jost", sans-serif;
   font-size: 14px;
 }
 
@@ -206,8 +211,8 @@ img.gallery {
 .project-title {
   color: #fff;
   text-transform: uppercase;
-  font-weight: bold;  
-  /* letter-spacing: 1px; */
+  /* font-weight: bold; */  
+  letter-spacing: 1px;
 }
 
 .project-subtitle {
