Start quote updated.

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@
   margin: 0;
   box-sizing: border-box;
   color: #fff;
-  font-family: "Jost", sans-serif;
+  font-family: "Jost", "FreeSans", sans-serif;
   font-size: 16px;
 }
 
