--- a/style.css
+++ b/style.css
@@ -1,51 +1,51 @@
 @font-face {
   font-family: "Jost";
-  src: url("../fonts/Jost-Light.ttf");
+  src: url("fonts/Jost-Light.ttf");
   font-weight: light;
 }
 
 @font-face {
   font-family: "Jost";
-  src: url("../fonts/Jost-LightItalic.ttf");
+  src: url("fonts/Jost-LightItalic.ttf");
   font-weight: light;
   font-style: italic;
 }
 
 @font-face {
   font-family: "Jost";
-  src: url("../fonts/Jost-Regular.ttf");
+  src: url("fonts/Jost-Regular.ttf");
   font-weight: normal;
 }
 
 @font-face {
   font-family: "Jost";
-  src: url("../fonts/Jost-Italic.ttf");
+  src: url("fonts/Jost-Italic.ttf");
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: "Jost";
-  src: url("../fonts/Jost-SemiBold.ttf");
+  src: url("fonts/Jost-SemiBold.ttf");
   font-weight: 600;
 }
 
 @font-face {
   font-family: "Jost";
-  src: url("../fonts/Jost-SemiBoldItalic.ttf");
+  src: url("fonts/Jost-SemiBoldItalic.ttf");
   font-weight: 600;
   font-style: italic;
 }
 
 @font-face {
   font-family: "Jost";
-  src: url("../fonts/Jost-Bold.ttf");
+  src: url("fonts/Jost-Bold.ttf");
   font-weight: bold;
 }
 
 @font-face {
   font-family: "Jost";
-  src: url("../fonts/Jost-BoldItalic.ttf");
+  src: url("fonts/Jost-BoldItalic.ttf");
   font-weight: bold;
   font-style: italic;
 }
