--- a/style.css
+++ b/style.css
@@ -156,7 +156,8 @@ nav .mainMenu li {
 
 nav .mainMenu li a {
   font-family: "Poppins";
-  line-height: 60px;
+  line-height: 96px;
+  font-size: 48px;
 }
 
 nav a:link {
@@ -278,7 +279,6 @@ h1 {
 }
 
 h2 {
-  font-family: "Poppins";
   color: #fff;
   font-weight: normal;
   padding-bottom: 12px;
@@ -532,6 +532,7 @@ footer {
   }
 
   nav .mainMenu li a {
+    font-size: 16px;
     line-height: 76px;
   }
 
@@ -556,11 +557,11 @@ footer {
   }
 
   .row {
-    padding-top: 132px;
+    padding-top: 120px;
   }
 
   .column {
-    top: 224px;
+    top: 216px;
     float: left;
     width: 50%;
   }
