--- a/style.css
+++ b/style.css
@@ -1,76 +1,26 @@
 @font-face {
-  font-family: "Jost";
-  src: url("fonts/Jost-Regular.ttf");
+  font-family: "OverusedGrotesk";
+  src: url("fonts/OverusedGrotesk-Roman.ttf");
   font-weight: normal;
 }
 
 @font-face {
-  font-family: "Jost";
-  src: url("fonts/Jost-Italic.ttf");
-  font-weight: normal;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Jost";
-  src: url("fonts/Jost-Bold.ttf");
-  font-weight: bold;
-}
-
-@font-face {
-  font-family: "Jost";
-  src: url("fonts/Jost-BoldItalic.ttf");
-  font-weight: bold;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Poppins";
-  src: url("fonts/Poppins-Regular.ttf");
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: "Poppins";
-  src: url("fonts/Poppins-Italic.ttf");
+  font-family: "OverusedGrotesk";
+  src: url("fonts/OverusedGrotesk-Italic.ttf");
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "Poppins";
-  src: url("fonts/Poppins-Bold.ttf");
+  font-family: "OverusedGrotesk";
+  src: url("fonts/OverusedGrotesk-Bold.ttf");
   font-weight: bold;
 }
 
 @font-face {
-  font-family: "Poppins";
-  src: url("fonts/Poppins-BoldItalic.ttf");
+  font-family: "OverusedGrotesk";
+  src: url("fonts/OverusedGrotesk-BoldItalic.ttf");
   font-weight: bold;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "FreeSans";
-  src: url("fonts/FreeSans.woff") format('woff');
-}
-
-@font-face {
-  font-family: "FreeSans";
-  src: url("fonts/FreeSansBold.woff") format('woff');
-  font-weight: bold;
-}
-
-@font-face {
-  font-family: "FreeSans";
-  src: url("fonts/FreeSansBoldOblique.woff") format('woff');
-  font-weight: bold;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "FreeSans";
-  src: url("fonts/FreeSansOblique.woff") format('woff');
   font-style: italic;
 }
 
@@ -79,7 +29,7 @@
   margin: 0;
   box-sizing: border-box;
   color: #fff;
-  font-family: "Jost", "FreeSans", sans-serif;
+  font-family: "OverusedGrotesk", sans-serif;
   font-size: 16px;
 }
 
@@ -155,9 +105,8 @@ nav .mainMenu li {
 }
 
 nav .mainMenu li a {
-  font-family: "Poppins";
-  line-height: 96px;
   font-size: 48px;
+  line-height: 96px;
 }
 
 nav a:link {
@@ -258,21 +207,21 @@ img.gallery {
 } */
 
 .project-title {
-  font-family: "Poppins";
+  /* font-family: "Poppins"; */
   font-size: 24px;
   /* font-weight: bold; */
-  letter-spacing: 1px;
-  color: #555;
   text-transform: uppercase;
+  /* letter-spacing: 1px; */
+  color: #555;
   line-height: 1;
-  transition: .5s ease;
-  
+  transition: .5s ease;  
 }
 
 .project-subtitle {
-  font-family: "Poppins";
+  /* font-family: "Poppins"; */
+  font-size: 24px;
+  /* font-weight: bold; */
   color: #555;
-  margin-top: 6px;
   /* font-size: 14px; */
   transition: .5s ease;
 }
@@ -295,17 +244,20 @@ img.gallery {
 }
 
 h1 {
-  font-family: "Poppins";
   color: #fff;
+  font-size: 48px;
   font-weight: normal;
-  text-transform: uppercase;  
-  letter-spacing: 1px;
+  line-height: 1;
+  /* text-transform: uppercase;
+  letter-spacing: 1px; */
 }
 
 h2 {
   color: #fff;
+  font-size: 24px;
+  line-height: 1.25;
   font-weight: normal;
-  padding-bottom: 12px;
+  max-width: 800px;
 }
 
 h3 {
@@ -580,9 +532,6 @@ footer {
     background-color: #000;
   }
 
-  .project {
-  }
-
   .row {
     padding-top: 140px;
   }
@@ -674,7 +623,7 @@ footer {
   }
 
   .project-subtitle {
-    font-size: 14px;
+    font-size: 24px;
   }
 }
 
@@ -706,14 +655,6 @@ footer {
   }
 
   footer {
-    font-size: 14px;
-  }
-
-  .project-title {
-    font-size: 24px;
-  }
-
-  .project-subtitle {
     font-size: 14px;
   }
 
