--- a/style.css
+++ b/style.css
@@ -207,19 +207,18 @@ img.gallery {
 } */
 
 .project-title {
-  /* font-family: "Poppins"; */
-  font-size: 24px;
+  font-size: 30px;
   /* font-weight: bold; */
-  text-transform: uppercase;
-  /* letter-spacing: 1px; */
+  /* text-transform: uppercase;
+  letter-spacing: 1px; */
   color: #555;
   line-height: 1;
   transition: .5s ease;  
 }
 
 .project-subtitle {
-  /* font-family: "Poppins"; */
-  font-size: 24px;
+  margin-top: 24px;
+  font-size: 16px;
   /* font-weight: bold; */
   color: #555;
   /* font-size: 14px; */
@@ -617,14 +616,6 @@ footer {
   .grid {
     grid-template-columns: 1fr 1fr 1fr;
   }
-
-  .project-title {
-    font-size: 24px;
-  }
-
-  .project-subtitle {
-    font-size: 24px;
-  }
 }
 
 @media only screen and (min-width: 1920px) {
@@ -668,6 +659,10 @@ footer {
 
   nav .mainMenu li {
     padding-left: 72px;
+  }
+
+  nav .mainMenu li a {
+    font-size: 18px;
   }
 
   main {
