--- a/style.css
+++ b/style.css
@@ -437,6 +437,24 @@ video {
   justify-content: center;
 }
 
+.button {
+  font-size: 48px;
+  color: #999;
+  border: solid 2px #999;
+  border-radius: 60px;
+  width: fit-content;
+  margin-top: 30px;
+  padding: 3px 24px;
+  transition-duration: 0.5s;
+}
+
+.button:hover {
+  border: solid 2px #fff;
+  background-color: #fff;
+  color: #000;
+  cursor: pointer;
+}
+
 .background-video {
   position: fixed;
   left: 50%;
@@ -526,12 +544,23 @@ footer {
     display: none;
   }
 
+  .button {
+    font-size: 16px;
+    color: #999;
+    border: solid 2px #999;
+    padding: 3px 12px;
+  }
+
   main {
     margin: 0px 48px 0px;
   }
 
   .grid {
     grid-template-columns: 1fr 1fr;
+  }
+
+  .line {
+    height: 1px;
   }
 
   .headline {
