--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ h2 {
   line-height: 1.25;
   font-weight: normal;
   max-width: 800px;
+  z-index: 2;
 }
 
 h2 a {
@@ -128,7 +129,7 @@ nav {
   width: 100%;
   height: 76px;
   top: 0;
-  z-index: 2;
+  z-index: 10;
   transition: .5s ease;
 }
 
@@ -228,6 +229,10 @@ main {
 .column {
   width: 100%;
   padding-bottom: 18px;
+}
+
+.about-column-right img {
+  max-width: 100%;
 }
 
 .grid a {
@@ -377,7 +382,7 @@ img.gallery {
 .previewModal {
   display: none;
   position: fixed;
-  z-index: 5;
+  z-index: 100;
   left: 0;
   top: 0;
   width: 100%;
