--- a/style.css
+++ b/style.css
@@ -648,7 +648,7 @@ footer {
     width: calc(50% - 48px);
     top: 76px;
     z-index: 1;
-    background-color: #000;
+    background: linear-gradient(rgba(0 0 0 / 100%) 90px, rgba(255 255 255 / 0%));
   }
 
   .row {
