--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@
   font-family: "OverusedGrotesk", sans-serif;
   font-size: 16px;
   scroll-behavior: smooth;
+  -webkit-tap-highlight-color: transparent;
   /* scrollbar-width: thin;
   scrollbar-color: #fff #000; */
 }
